# MicroService

./: .gitignore
AuthService/: CMakeLists.txt
AuthService/include/: AuthServiceImpl.h
AuthService/proto/: AuthService.proto  CMakeLists.txt
AuthService/secret_key/: private_key.pem  public_key.pem
AuthService/src/: AuthServiceImpl.cpp  CMakeLists.txt  main.cpp
ChatService/: CMakeLists.txt
ChatService/proto/: ChatService.proto
ChatService/src/: CMakeLists.txt  main.cpp
FileService/: CMakeLists.txt
FileService/src/: CMakeLists.txt
